Add a workaround for a bug in xorg-server/glx

See details at https://bugs.freedesktop.org/show_bug.cgi?id=76755

Signed-off-by: Rinat Ibragimov <ibragimovrinat@mail.ru>
Signed-off-by: Xiang, Haihao <haihao.xiang@intel.com>